objects/Migration_Rule_Relation__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detail_Migration_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Detail Migration Rule</label>
        <referenceTo>Migration_Rule__c</referenceTo>
        <relationshipLabel>Migration Rule Relations (Detail Migration Rule)</relationshipLabel>
        <relationshipName>Migration_Rule_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detail_Source_Object__c</fullName>
        <formula>Detail_Migration_Rule__r.Source_Object__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail Source Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Migration_Rule__c</fullName>
        <label>Master Migration Rule</label>
        <referenceTo>Migration_Rule__c</referenceTo>
        <relationshipLabel>Migration Rule Relations</relationshipLabel>
        <relationshipName>Migration_Rule_Relations1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_Relationship_Name__c</fullName>
        <label>Relationship Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Relationship_Field__c</fullName>
        <label>Relationship Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Migration Rule Relation</label>
    <nameField>
        <displayFormat>MRR-{00000}</displayFormat>
        <label>Migration Rule Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Rule Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>